--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ django-filter==2.4.0
 django-guardian==2.4.0
 django-import-export==2.5.0
 django-ipware==3.0.2
+django-jazzmin==2.4.7
 django-jsonfield==1.4.1
 django-phonenumber-field==5.2.0
 django-redis==5.0.0
+django-reverse-admin==2.9.6
 django-utils-six==2.0
 djangorestframework==3.12.4
 et-xmlfile==1.1.0
